@@ -102,6 +102,10 @@ production.
   strings will now start with digits 0 and 8-f as often as they should.
 * (bug 45371) Removed Parser_LinkHooks and CoreLinkFunctions classes.
 * (bug 41545) Allow <kbd>, <samp>, and <var> to be nested like allowed in html.
+* (bug 38894) AbortNewAccount and AbortAutoAccount handlers may return an error
+  either as an HTML string or a Message object. Previously, AbortNewAccount
+  expected the returned error to be an HTML string, while AbortAutoAccount
+  expected it to be a message key.
 
 === API changes in 1.22 ===
 * (bug 46626) xmldoublequote parameter was removed. Because of a bug, the
